Revert "Fix alignment of long label keys and values (#6888)" (#7072)
This reverts commit 48a15ecb6bb0e33d9e3ce1a4d43aafcbb4993c23.

--- a/modules/web/src/app/shared/components/labels/style.scss
+++ b/modules/web/src/app/shared/components/labels/style.scss
@@ -12,21 +12,6 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-.labels-container {
-  .mat-mdc-chip {
-    height: auto;
-
-    .label-key, .label-value {
-      align-items: center;
-      display: flex;
-      min-width: 30%;
-      white-space: normal;
-      width: auto;
-      word-break: break-word;
-    }
-  }
-}
-
 .hide-extra-labels {
   height: 34px;
   overflow: hidden;
